05/pod_secret.yml
apiVersion: v1
kind: Pod
metadata:
  name: secretmount
spec: 
  containers:
  - name: secretmount
    image: nginx
    volumeMounts:
      - name: foo
        mountPath: "/etc/foo"
        readOnly: true
  volumes:
  - name: foo
    secret: 
      secretName: testsecret01
