05/podsecretenv.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-env
spec:
  containers:
  - name: secret-env01
    image: nginx
  restartPolicy: Never
